@@ -1,5 +1,5 @@
 /*
- *    Copyright 2016-2024 the original author or authors.
+ *    Copyright 2016-2025 the original author or authors.
  *
  *    Licensed under the Apache License, Version 2.0 (the "License");
  *    you may not use this file except in compliance with the License.
@@ -30,13 +30,13 @@ public abstract class AbstractListValueCondition<T> implements VisitableConditio
         this.values = Objects.requireNonNull(values);
     }
 
-    public final <R> Stream<R> mapValues(Function<T, R> mapper) {
-        return values.stream().map(mapper);
+    public final Stream<T> values() {
+        return values.stream();
     }
 
     @Override
-    public boolean shouldRender() {
-        return !values.isEmpty();
+    public boolean isEmpty() {
+        return values.isEmpty();
     }
 
     @Override
@@ -51,37 +51,35 @@ public abstract class AbstractListValueCondition<T> implements VisitableConditio
 
     private Collection<T> applyFilter(Predicate<? super T> predicate) {
         Objects.requireNonNull(predicate);
-        return values.stream().filter(predicate).collect(Collectors.toList());
+        return values.stream().filter(predicate).toList();
     }
 
     protected <S extends AbstractListValueCondition<T>> S filterSupport(Predicate<? super T> predicate,
             Function<Collection<T>, S> constructor, S self, Supplier<S> emptySupplier) {
-        if (shouldRender()) {
+        if (isEmpty()) {
+            return self;
+        } else {
             Collection<T> filtered = applyFilter(predicate);
             return filtered.isEmpty() ? emptySupplier.get() : constructor.apply(filtered);
-        } else {
-            return self;
         }
     }
 
     protected <R, S extends AbstractListValueCondition<R>> S mapSupport(Function<? super T, ? extends R> mapper,
             Function<Collection<R>, S> constructor, Supplier<S> emptySupplier) {
-        if (shouldRender()) {
-            return constructor.apply(applyMapper(mapper));
-        } else {
+        if (isEmpty()) {
             return emptySupplier.get();
+        } else {
+            return constructor.apply(applyMapper(mapper));
         }
     }
 
     /**
-     * If renderable, apply the predicate to each value in the list and return a new condition with the filtered values.
-     *     Else returns a condition that will not render (this). If all values are filtered out of the value
-     *     list, then the condition will not render.
+     * If not empty, apply the predicate to each value in the list and return a new condition with the filtered values.
+     *     Else returns an empty condition (this).
      *
-     * @param predicate
-     *            predicate applied to the values, if renderable
+     * @param predicate predicate applied to the values, if not empty
      *
-     * @return a new condition with filtered values if renderable, otherwise a condition that will not render.
+     * @return a new condition with filtered values if renderable, otherwise an empty condition
      */
     public abstract AbstractListValueCondition<T> filter(Predicate<? super T> predicate);
 
